[project]
name = "comfyui-lora-auto-trigger-words"
description = "The aim of these custom nodes is to get an easy access to the tags used to trigger a lora / lycoris. Extract the tags from civitai or from the safetensors metadatas when available."
version = "1.0.4"
license = "MIT"

[project.urls]
Repository = "https://github.com/idrirap/ComfyUI-Lora-Auto-Trigger-Words"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "dijkstra"
DisplayName = "ComfyUI-Lora-Auto-Trigger-Words"
Icon = ""
